Fix drag/scroll and overflow issues on CookMode

--- a/components/cook-mode/CookMode.module.css
+++ b/components/cook-mode/CookMode.module.css
@@ -7,6 +7,7 @@
   
   background: var(--primary-background);
   z-index: 9999;
+  overflow: hidden;
 }
 
 .cook-mode-panel-wrapper::after {
